[package]
name = "RustBlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Server
rocket = 
rocket_codegen = 
rocket_contrib = { version = , default-features = false, features = [] }

# The following four dependencies will be touched upon
# at later times in this blog series
serde = 
serde_derive = 
serde_json = 
tera = 

# DB
diesel = { version = , features = [] }
diesel_codegen = { version = , features = [] }

# r2d2 is related to database connection pools
# this will be reviewed in a future post
r2d2 = 
r2d2-diesel = 

# SYS
dotenv = 